# moonraker-engage-chatbot

./: .env.example  .env.production  .gitignore  README.md  pyproject.toml  requirements.txt  vercel.json
api/: main.py  requirements.txt
frontend/: index.html  package.json  vite.config.ts
frontend/src/: main.tsx
frontend/src/components/: Analytics.tsx  ChatbotSetup.tsx  Dashboard.tsx  Sidebar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  input.tsx  label.tsx  select.tsx  switch.tsx  tabs.tsx
src/: main.py
src/ai/: mental_health_agent.py  sales_chatbot.py
src/api/: dashboard.py  patient_chatbot.py  therapist_interface.py
src/core/: config.py  security.py
src/ghl/: mcp_client.py
src/models/: patient.py  practice.py  therapist.py
